--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,18 @@
 @tailwind utilities;
 
 @layer base {
-  body {
+  html {
     -webkit-tap-highlight-color: transparent; /* for removing the highlight */
+  }
+}
+
+@layer utilities {
+  .px-safe {
+    padding-left: env(safe-area-inset-left);
+    padding-right: env(safe-area-inset-right);
+  }
+
+  .pb-safe {
+    padding-bottom: env(safe-area-inset-bottom);
   }
 }
