--- a/app/globals.css
+++ b/app/globals.css
@@ -31,4 +31,8 @@
   .pb-safe {
     padding-bottom: env(safe-area-inset-bottom);
   }
+
+  .mb-safe {
+    margin-bottom: env(safe-area-inset-bottom);
+  }
 }
